Add cython to regreg requirements

--- a/master.cfg
+++ b/master.cfg
@@ -700,7 +700,7 @@ nipype_bot = GithubBot('nipy', 'nipype',
 )
 regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
-    pip_depends = ('nose',),
+    pip_depends = ('nose', 'cython'),
 )
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
