Update nipy examples tests

--- a/master.cfg
+++ b/master.cfg
@@ -999,7 +999,8 @@ def shell_cmd_factory(git_url, cmds, posix=True):
     return factory
 
 
-def example_factory(git_url, py_path, out_dir, python_cmd='python'):
+def example_factory(git_url, py_path, out_dir, python_cmd='python',
+                    pip_depends=(), timeout=2400):
     factory = BuildFactory()
     factory.addStep(Git(
         repourl=git_url,
@@ -1013,12 +1014,19 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
         ShellCommand(command=[
             py_path + r'/bin/virtualenv', '--system-site-packages', 'venv']
             ))
+    venv_env = {'PATH': Interpolate("%(prop:workdir)s/build/venv/bin:${PATH}")}
+    # Install any dependencies
+    for pkg_spec in pip_depends:
+        if isinstance(pkg_spec, basestring):
+            pkg_spec = [pkg_spec]
+        cmd = ['pip', 'install']
+        factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
+                    env=venv_env))
     # Install into virtualenv
     factory.addStep(
         ShellCommand(command=[python_cmd, 'setup.py', 'install'],
-                     env={'PATH':
-                          Interpolate("%(prop:workdir)s/build/venv/bin:${PATH}")}
-            ))
+                     env=venv_env)
+            )
     # Make directory for examples
     factory.addStep(
         ShellCommand(command=['mkdir', 'eg_logs']))
@@ -1030,7 +1038,8 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
             '../examples',
             '--log-path=../eg_logs'],
             workdir=r'build/venv',
-            env={'PATH': Interpolate("%(prop:workdir)s/build/venv/bin:${PATH}")}
+            timeout=timeout,
+            env=venv_env
             ))
     # Upload logs
     factory.addStep(DirectoryUpload(slavesrc="eg_logs",
@@ -1367,21 +1376,23 @@ c['builders'].append(BuilderConfig(
 
 # Example builders
 c['builders'].append(BuilderConfig(
-    name='nipy-examples-2.6',
+    name='nipy-examples-2.7',
     slavenames=['osx-10.6'],
     factory=example_factory(
         'git://github.com/nipy/nipy.git',
-        '/Library/Frameworks/Python.framework/Versions/2.6',
-        "nipy-examples-2.6")
+        '/Library/Frameworks/Python.framework/Versions/2.7',
+        "nipy-examples-2.7",
+        pip_depends=('nibabel', 'sympy', 'matplotlib'))
 ))
 c['builders'].append(BuilderConfig(
-    name='nipy-examples-3.3',
+    name='nipy-examples-3.4',
     slavenames=['osx-10.6'],
     factory=example_factory(
         'git://github.com/nipy/nipy.git',
-        '/Library/Frameworks/Python.framework/Versions/3.3',
-        "nipy-examples-3.3",
-        "python3")
+        '/Library/Frameworks/Python.framework/Versions/3.4',
+        "nipy-examples-3.4",
+        "python3.4",
+        pip_depends=('nibabel', 'sympy', 'matplotlib'))
 ))
 # pip and easy_install builders
 hours = 5
