Switch to using zibi for OSX main builds

--- a/master.cfg
+++ b/master.cfg
@@ -143,7 +143,6 @@ sparc_slaves = ['nd-bb-slave-sparc']
 osx_tiger_ppc_slaves = ['osx-mini']
 osx_snowleopard_slaves = ['osx-10.6']
 osx_lion_slaves = ['osx-10.7']
-osx_mountainlion_slaves = ['osx-10.8']
 osx_yosemite_slaves = ['mac-pro']
 win7_32_slaves = ['win7-32-mini']
 win7_64_slaves = ['mike-win7-64']
@@ -185,7 +184,7 @@ add_lock(slave_locks,
 
 # These are working desktops, so throttle them to keep the machines calm
 add_lock(slave_locks,
-         ['tom-standard', 'osx-10.8'],
+         ['tom-standard'],
          MasterLock("working-desktops", maxCount=1), 'counting')
 
 # The 'slaves' list defines the set of recognized buildslaves. Each element is
@@ -702,6 +701,10 @@ regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
     pip_depends = ('nose', 'cython'),
 )
+regreg_bot_no_doctests = GithubBot('regreg', 'regreg',
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe regreg'),
+    pip_depends = ('nose',),
+)
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s pandas'),
@@ -791,6 +794,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                dipy_bot,
                                                nipype_bot,
                                                regreg_bot,
+                                               regreg_bot_no_doctests,
                                                statsmodels_bot,
                                                seaborn_bot,
                                                pymvpa_bot,
@@ -823,7 +827,6 @@ c['schedulers'] = sum([
                            'nibabel-py2.7-fedora',
                            'nibabel-py2.7-osx-10.6',
                            'nibabel-py2.7-osx-10.7',
-                           'nibabel-py2.7-osx-10.8',
                            'nibabel-py2.7-osx-10.10',
                            'nibabel-py2.7-debian-ppc',
                            'nibabel-py3.4',
@@ -838,7 +841,7 @@ c['schedulers'] = sum([
                           'nitime-py2.7-fedora',
                           'nitime-py2.7-osx-10.6',
                           'nitime-py2.7-osx-10.7',
-                          'nitime-py2.7-osx-10.8',
+                          'nitime-py2.7-osx-10.10',
                           'nitime-py3.4',
                           ]),
     pyarbus_bot.schedulers(['pyarbus-py2.6',
@@ -854,7 +857,7 @@ c['schedulers'] = sum([
                         'nipy-py2.7-fedora',
                         'nipy-py2.7-osx-10.6',
                         'nipy-py2.7-osx-10.7',
-                        'nipy-py2.7-osx-10.8',
+                        'nipy-py2.7-osx-10.10',
                         'nipy-py2.7-debian-ppc',
                         'nipy-py3.4',
                         'nipy-py3.3',
@@ -869,7 +872,7 @@ c['schedulers'] = sum([
                         'dipy-py2.7-fedora',
                         'dipy-py2.7-osx-10.6',
                         'dipy-py2.7-osx-10.7',
-                        'dipy-py2.7-osx-10.8',
+                        'dipy-py2.7-osx-10.10',
                         'dipy-py2.7-debian-ppc',
                         'dipy-py3.4',
                         'dipy-py3.3',
@@ -879,7 +882,7 @@ c['schedulers'] = sum([
                           'nipype-py2.7-win32',
                           'nipype-py2.7-fedora',
                           'nipype-py2.7-osx-10.6',
-                          'nipype-py2.7-osx-10.8',
+                          'nipype-py2.7-osx-10.10',
                           'nipype-py2.7-debian-ppc',
                        ]),
     regreg_bot.schedulers(['regreg-py2.6',
@@ -888,7 +891,7 @@ c['schedulers'] = sum([
                           'regreg-py2.7-fedora',
                           'regreg-py2.7-osx-10.6',
                           'regreg-py2.7-osx-10.7',
-                          'regreg-py2.7-osx-10.8',
+                          'regreg-py2.7-osx-10.10',
                           'regreg-py2.7-debian-ppc',
                        ]),
     pandas_bot.schedulers([
@@ -913,9 +916,9 @@ c['schedulers'] = sum([
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
     numpy_bot.schedulers([
-                        'numpy-py2.7-osx-10.8',
-                        'numpy-py3.3-osx-10.8',
-                        'numpy-py3.4-osx-10.8',
+                        'numpy-py2.7-osx-10.10',
+                        'numpy-py3.3-osx-10.10',
+                        'numpy-py3.4-osx-10.10',
                         'numpy-py2.7-debian-ppc',
                         'numpy-py2.x-sid-sparc',
                         'numpy-py3.x-sid-sparc',
@@ -1270,7 +1273,7 @@ for slavenames, bdist_suffix in (
         slavenames=slavenames,
         factory=factory))
 # Make numpy wheels on 10.9, test on 10.6
-building_slaves = osx_mountainlion_slaves
+building_slaves = osx_yosemite_slaves
 testing_slaves = osx_snowleopard_slaves
 for py_ver in ('2.7', '3.3', '3.4'):
     python_exe = pyorg_pybin(py_ver)
@@ -1413,7 +1416,7 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
             else:
                 nose_target = 'nose'
             c['builders'] += bot.build_builders(
-                ((builder_name, osx_mountainlion_slaves),),
+                ((builder_name, osx_yosemite_slaves),),
                 python=pyorg_pybin(pyver),
                 pip_depends = (nose_target,), # ditto
                 install_cmd = install_cmd,
@@ -1435,7 +1438,6 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nibabel-py2.7-osx-10.7', osx_lion_slaves),
-     ('nibabel-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nibabel-py2.7-osx-10.10', osx_yosemite_slaves),
      ('nibabel-py2.7-debian-ppc', debian_ppc_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
@@ -1455,11 +1457,11 @@ c['builders'] += nibabel_bot.build_builders(
     python='python3.3')
 # Different versions of Pydicom
 c['builders'] += nibabel_bot.build_builders(
-    (('nibabel-py2.7-pyd0.9.7', osx_mountainlion_slaves),),
+    (('nibabel-py2.7-pyd0.9.7', osx_yosemite_slaves),),
     python='python2.7',
     pip_depends = ('nose', 'pydicom==0.9.7'))
 c['builders'] += nibabel_bot.build_builders(
-    (('nibabel-py2.7-pyd0.9.8', osx_mountainlion_slaves),),
+    (('nibabel-py2.7-pyd0.9.8', osx_yosemite_slaves),),
     python='python2.7',
     pip_depends = ('nose', 'pydicom==0.9.8'))
 # Nitime
@@ -1468,7 +1470,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nitime-py2.7-osx-10.7', osx_lion_slaves),
-     ('nitime-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('nitime-py2.7-osx-10.10', osx_yosemite_slaves),
      ('nitime-py2.6-arm', arm_slaves),
      ('nitime-py2.7-fedora', fedora_slaves),
      ('nitime-py2.7-win32', win7_32_slaves))
@@ -1485,7 +1487,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nipy-py2.7-osx-10.7', osx_lion_slaves),
-     ('nipy-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('nipy-py2.7-osx-10.10', osx_yosemite_slaves),
      ('nipy-py2.7-debian-ppc', debian_ppc_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
@@ -1503,7 +1505,7 @@ c['builders'] += nipy_bot.build_builders(
     python='python3.3')
 # Different versions of Sympy, nibabel
 c['builders'] += nipy_bot.build_builders(
-    (('nipy-py2.7-sym0.7.0-nib1.2.0', osx_mountainlion_slaves),),
+    (('nipy-py2.7-sym0.7.0-nib1.2.0', osx_yosemite_slaves),),
     pip_depends = ('nose', 'sympy==0.7.0', 'nibabel==1.2.0'))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
@@ -1514,7 +1516,7 @@ c['builders'] += dipy_bot_nox.build_builders(
 c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('dipy-py2.7-osx-10.7', osx_lion_slaves),
-     ('dipy-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('dipy-py2.7-osx-10.10', osx_yosemite_slaves),
      ('dipy-py2.7-debian-ppc', debian_ppc_slaves),
      ('dipy-py2.7-fedora', fedora_slaves),
      ('dipy-py2.7-win32', win7_32_slaves),
@@ -1533,7 +1535,7 @@ c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.7-osx-10.6', osx_snowleopard_slaves),
-     ('nipype-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('nipype-py2.7-osx-10.10', osx_yosemite_slaves),
      ('nipype-py2.7-debian-ppc', debian_ppc_slaves),
      ('nipype-py2.7-fedora', fedora_slaves),
      ('nipype-py2.7-win32', win7_32_slaves)))
@@ -1542,7 +1544,7 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-32', linux_32_slaves),
      ('regreg-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('regreg-py2.7-osx-10.7', osx_lion_slaves),
-     ('regreg-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('regreg-py2.7-osx-10.10', osx_yosemite_slaves),
      ('regreg-py2.7-debian-ppc', debian_ppc_slaves),
      ('regreg-py2.7-fedora', fedora_slaves),
      ('regreg-py2.7-win32', win7_32_slaves)))
@@ -1583,7 +1585,7 @@ c['builders'] += pymvpa_bot.build_builders(
      ('pymvpa-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('pymvpa-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('pymvpa-py2.7-osx-10.7', osx_lion_slaves),
-     ('pymvpa-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('pymvpa-py2.7-osx-10.10', osx_yosemite_slaves),
      ('pymvpa-py2.7-debian-ppc', debian_ppc_slaves),
      ('pymvpa-py2.7-win32', win7_32_slaves),
     ), schedulers=c['schedulers'])
@@ -1612,7 +1614,7 @@ c['builders'] += fail2ban_bot.build_builders(
     (('fail2ban-py2.x-sid-sparc', sparc_slaves_sid),
      ('fail2ban-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('fail2ban-py2.6-osx-10.6', osx_snowleopard_slaves),
-     ('fail2ban-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('fail2ban-py2.7-osx-10.10', osx_yosemite_slaves),
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
@@ -1630,7 +1632,7 @@ c['builders'] += psychopy_bot.build_builders(
     (('psychopy-py2.x-sid-sparc', sparc_slaves_sid),
      ('psychopy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('psychopy-py2.6-osx-10.6', osx_snowleopard_slaves),
-     ('psychopy-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('psychopy-py2.7-osx-10.10', osx_yosemite_slaves),
      ('psychopy-py2.7-ppc', debian_ppc_slaves),
      ('psychopy-py2.6-arm', arm_slaves),
      ('psychopy-py2.7-win7', win7_64_slaves),
@@ -1642,9 +1644,9 @@ c['builders'] += sympy_bot.build_builders(
     (('sympy-py2.6-32', linux_32_slaves),
     ))
 c['builders'] += numpy_bot.build_builders(
-    (('numpy-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('numpy-py3.3-osx-10.8', osx_mountainlion_slaves),
-     ('numpy-py3.4-osx-10.8', osx_mountainlion_slaves),
+    (('numpy-py2.7-osx-10.10', osx_yosemite_slaves),
+     ('numpy-py3.3-osx-10.10', osx_yosemite_slaves),
+     ('numpy-py3.4-osx-10.10', osx_yosemite_slaves),
      ('numpy-py2.7-debian-ppc', debian_ppc_slaves),
      ('numpy-py2.x-sid-sparc', sparc_slaves_sid),
     ))
@@ -1841,7 +1843,7 @@ c['schedulers'].append(
                jobdir="jobdir"))
 
 # A build seemed to work with this command from a dipy repo directory
-# $ buildbot try -c ssh -u buildbot --vc=git -b dipy-py2.7-osx-10.8 --host=nipy.bic.berkeley.edu --jobdir=~buildbot/nibotmi/jobdir --branch=master
+# $ buildbot try -c ssh -u buildbot --vc=git -b dipy-py2.7-osx-10.10 --host=nipy.bic.berkeley.edu --jobdir=~buildbot/nibotmi/jobdir --branch=master
 
 ####### STATUS TARGETS
 
