Remove distclean from release checks (removes venv)

--- a/master.cfg
+++ b/master.cfg
@@ -1353,8 +1353,7 @@ c['builders'].append(BuilderConfig(
     name='nipy-release-checks',
     slavenames=['osx-10.6'],
     factory=inplace_cmd_factory(nipy_bot,
-        (('make', 'distclean'),
-         ('python', '-m', 'compileall', '.'),
+        (('python', '-m', 'compileall', '.'),
          ('make', 'sdist-tests'),
          ('make', 'bdist-egg-tests'),
          ('make', 'check-version-info'),
@@ -1364,8 +1363,7 @@ c['builders'].append(BuilderConfig(
     name='dipy-release-checks',
     slavenames=['osx-10.6'],
     factory=inplace_cmd_factory(dipy_bot,
-        (('make', 'distclean'),
-         ('python', '-m', 'compileall', '.'),
+        (('python', '-m', 'compileall', '.'),
          ('make', 'sdist-tests'),
          ('make', 'bdist-egg-tests'),
          ('make', 'check-version-info'),
