--- a/master.cfg
+++ b/master.cfg
@@ -1394,24 +1394,17 @@ c['builders'].append(BuilderConfig(
 hours = 5
 minutes = 0
 for bot in (nibabel_bot, nipy_bot, dipy_bot):
-    for pyver in ('2.7', '3.3'):
+    for pyver in ('2.7', '3.5'):
         project = bot.repo
         for install_cmd in (
                 ('pip', 'install', '--ignore-installed', project),
                 ('easy_install', '-U', project)):
             name_suff =  'py%s-%s' % (pyver, install_cmd[0])
             builder_name = '%s-%s' % (project, name_suff)
-            # need nose dev version for fix to easy_install installations here:
-            # https://github.com/nose-devs/nose/pull/661
-            # When nose releases next version (after 1.3.0) can drop this
-            if install_cmd[0] == 'easy_install':
-                nose_target = 'git+git://github.com/nose-devs/nose.git'
-            else:
-                nose_target = 'nose'
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_yosemite_slaves),),
                 python=pyorg_pybin(pyver),
-                pip_depends = (nose_target,), # ditto
+                pip_depends = ('nose',), # ditto
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
             c['schedulers'] += bot.nightly_scheduler(
