Add numpy as dependency for dipy

--- a/master.cfg
+++ b/master.cfg
@@ -683,14 +683,14 @@ dipy_bot = GithubBot('nipy', 'dipy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'argv = ["", "dipy", "--with-doctest", "--verbosity=3", "--exe"]; '
     'nose.core.TestProgram(argv=argv, addplugins=[doctests.Doctest()])'],
-    pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
+    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel'),
     build_timeout = 9600, # allow for longer registration builds
 )
 # dipy bot for linux machines with optional pip_depends that
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
-    pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
+    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel'),
     build_timeout = 9600, # allow for longer registration builds
 )
 nipype_bot = GithubBot('nipy', 'nipype',
