Add pip freeze to standard build
Show all installed modules

--- a/master.cfg
+++ b/master.cfg
@@ -403,6 +403,8 @@ class GithubBot(object):
             factory.addStep(ShellCommand(command=cmd))
         # Add install and runtime dependencies
         self._pip_install(factory, pip_depends, my_env)
+        # Show pip enviroment
+        factory.addStep(ShellCommand(command=['pip', 'freeze'], env=my_env))
         # Work out working directory for install
         if not self.src_subdir is None:
             factory.addStep(SetPropertyFromCommand(command=[
