--- a/edu.berkeley.bids.zibi.osx-10.10.plist
+++ b/edu.berkeley.bids.zibi.osx-10.10.plist
@@ -13,6 +13,9 @@
             <string>/Library/Frameworks/Python.framework/Versions/2.7/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin</string>
             <key>MACOSX_DEPLOYMENT_TARGET</key>
             <string>10.6</string>
+            <!-- Enable memory hungry and slow tests for nipy projects -->
+            <key>NIPY_EXTRA_TESTS</key>
+            <string>slow</string>
         </dict>
 
         <!-- Change this to the user you want to run buildbot as -->
