--- a/master.cfg
+++ b/master.cfg
@@ -691,9 +691,10 @@ dipy_bot = GithubBot('nipy', 'dipy',
 # dipy bot for linux machines with optional pip_depends that
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
-	test_env = dict(TEST_WITH_XVFB=True),
+	test_env = dict(TEST_WITH_XVFB='true'),
     test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy'),
-    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel'),
+    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel',
+                   'xvfbwrapper'),
     build_timeout = 9600, # allow for longer registration builds
 )
 nipype_bot = GithubBot('nipy', 'nipype',
