--- a/edu.berkeley.bids.zibi.osx-10.10.plist
+++ b/edu.berkeley.bids.zibi.osx-10.10.plist
@@ -15,7 +15,7 @@
             <string>10.6</string>
             <!-- Enable memory hungry and slow tests for nipy projects -->
             <key>NIPY_EXTRA_TESTS</key>
-            <string>slow</string>
+            <string>slow,bigmem</string>
         </dict>
 
         <!-- Change this to the user you want to run buildbot as -->
