Added python 3.5 machines.

--- a/master.cfg
+++ b/master.cfg
@@ -934,6 +934,7 @@ c['schedulers'] = sum([
     nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'exe-33', 2, 20, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'exe-34', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-35'], 'exe-35', 2, 30, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27'],
                                   'exe-27', 2, 40, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27-whl'],
@@ -942,6 +943,8 @@ c['schedulers'] = sum([
                                   'exe-33', 2, 50, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-34'],
                                   'exe-34', 3, 00, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-35'],
+                                  'exe-35', 3, 00, True),
     # Windows 64 nightly builds
     nibabel_bot.nightly_scheduler(['nibabel-bdist64-27'],
                                   'exe64-27', 2, 00, True),
@@ -953,6 +956,7 @@ c['schedulers'] = sum([
     dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-exe-33', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-exe-34', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-exe-35', 3, 30, True),
     # OSX nightlies
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
@@ -1093,6 +1097,14 @@ c['builders'].append(BuilderConfig(
         python = r'c:\Python34\python.exe')
 ))
 c['builders'].append(BuilderConfig(
+    name='nibabel-bdist32-35',
+    slavenames=win7_32_slaves,
+    factory=nibabel_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python35\python.exe')
+))
+c['builders'].append(BuilderConfig(
     name='nibabel-bdist64-27',
     slavenames=win7_64_slaves,
     factory=nibabel_bot.bdist_factory(
@@ -1127,6 +1139,15 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python34\python.exe',
+        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
+))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist32-35',
+    slavenames=win7_32_slaves,
+    factory=nipy_bot.bdist_factory(
+        'exe',
+        test_cmd = nipy_test_cmd,
+        python = r'c:\Python35\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 # Add bdist builders for OSX
@@ -1185,6 +1206,16 @@ c['builders'].append(BuilderConfig(
         pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python34\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist32-35',
+    slavenames=win7_32_slaves,
+    factory=dipy_bot.bdist_factory(
+        'exe',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python35\python.exe')
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
@@ -1971,8 +2002,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 175)
-    assert(len(c['schedulers']) == 239)
+    assert(len(c['builders']) == 178)
+    assert(len(c['schedulers']) == 245)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
