Add matplotlib to nitime dependencies.
Also: more futzing with dipy on bots with no X.

--- a/master.cfg
+++ b/master.cfg
@@ -666,7 +666,7 @@ nibabel_bot = GithubBot('nipy', 'nibabel',
 )
 nitime_bot = GithubBot('nipy', 'nitime',
     test_cmd = nptest_command('nitime', verbose=None),
-    pip_depends = ('nose',)
+    pip_depends = ('nose', 'matplotlib')
 )
 pyarbus_bot = GithubBot('ivanov', 'pyarbus',
     test_cmd = nptest_command('pyarbus', verbose=None, use_agg=True),
@@ -691,8 +691,8 @@ dipy_bot = GithubBot('nipy', 'dipy',
 # dipy bot for linux machines with optional pip_depends that
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
-	test_env = dict(TEST_WITH_XVFB='true'),
-    test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy'),
+    test_env = dict(TEST_WITH_XVFB='true'),
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
     pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel',
                    'xvfbwrapper'),
     build_timeout = 9600, # allow for longer registration builds
@@ -1533,17 +1533,19 @@ c['builders'] += nipy_bot.build_builders(
 c['builders'] += dipy_bot_nox.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-32', linux_32_slaves),
-))
+     ('dipy-py2.6-squeeze-sparc', sparc_slaves),
+     ('dipy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
+     ('dipy-py2.x-sid-sparc', sparc_slaves_sid)
+     ))
+
 c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('dipy-py2.7-osx-10.7', osx_lion_slaves),
      ('dipy-py2.7-osx-10.10', osx_yosemite_slaves),
      ('dipy-py2.7-debian-ppc', debian_ppc_slaves),
      ('dipy-py2.7-fedora', fedora_slaves),
-     ('dipy-py2.7-win32', win7_32_slaves),
-     ('dipy-py2.6-squeeze-sparc', sparc_slaves),
-     ('dipy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
-     ('dipy-py2.x-sid-sparc', sparc_slaves_sid)))
+     ('dipy-py2.7-win32', win7_32_slaves)
+     ))
 # Python 3.2 into virtualenv
 c['builders'] += dipy_bot.build_builders(
     (('dipy-py3.4', linux_64_slaves),),
