When TEST_WITH_XVFB is set to 'skip', these tests are skipped. :

--- a/master.cfg
+++ b/master.cfg
@@ -691,7 +691,7 @@ dipy_bot = GithubBot('nipy', 'dipy',
 # dipy bot for linux machines with optional pip_depends that
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
-    test_env = dict(TEST_WITH_XVFB='true'),
+    test_env = dict(TEST_WITH_XVFB='skip'),
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
     pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel',
                    'xvfbwrapper'),
