Add texext dependency to nibabel doc build

--- a/master.cfg
+++ b/master.cfg
@@ -661,6 +661,7 @@ def nptest_command(pkg_name,
 nibabel_bot = GithubBot('nipy', 'nibabel',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel nisext'),
     doc_build_cmd = "cd doc && make html",
+    doc_pip_depends = ('sphinx', 'texext'),
     built_doc_src = "build/html",
     pip_depends = ('nose',)
 )
