Refactor dipy bdist builders

--- a/master.cfg
+++ b/master.cfg
@@ -537,12 +537,15 @@ class GithubBot(object):
             command = installer + [Interpolate('%(prop:bdist_file)s')],
             env=env))
         # Test
+        kwargs = dict(env=env,
+                workdir=workdir,
+                haltOnFailure=True)
+        if self.build_timeout is not None:
+            kwargs['timeout'] = self.build_timeout
         factory.addStep(
             ShellCommand(
                 command=test_cmd,
-                env=env,
-                workdir=workdir,
-                haltOnFailure=True))
+                **kwargs))
         # Upload
         factory.addStep(DirectoryUpload(slavesrc="dist",
                 masterdest="public_html/" + self.download_dir))
@@ -1177,14 +1180,15 @@ c['builders'].append(BuilderConfig(
 # the path, because multiprocessing gets very unhappy if you try and run stuff
 # from a command in a file that is not importable on the Python path, at least
 # on Windows 32 bit
-win32_dipy_test_cmd = ['python',  r'dipnost.py', 'dipy']
+win32_dipy_test_cmd = ['python',  r'dipnost.py', 'dipy', '--verbosity=3']
+dipy_pre_build = [['copy', r'tools\dipnost', r'venv\dipnost.py']]
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
-        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python27\python.exe')
 ))
@@ -1194,7 +1198,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
-        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python33\python.exe')
 ))
@@ -1204,7 +1208,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
-        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python34\python.exe')
 ))
@@ -1214,7 +1218,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
-        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python35\python.exe')
 ))
