Add some 64-bit builders

--- a/master.cfg
+++ b/master.cfg
@@ -146,6 +146,7 @@ osx_lion_slaves = ['osx-10.7']
 osx_yosemite_slaves = ['mac-pro']
 win7_32_slaves = ['win7-32-mini']
 win7_64_slaves = ['mike-win7-64']
+win10_64_slaves = ['win10']
 arm_slaves = ['arm-raspberry-pi']
 fedora_slaves = ['i20-fed19']
 osx_wheel_slaves = ['osx-10.6-clean']
@@ -961,6 +962,10 @@ c['schedulers'] = sum([
     dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-exe-33', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-exe-34', 3, 30, True),
     dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-exe-35', 3, 30, True),
+    # Windows 64 nightly
+    dipy_bot.nightly_scheduler(['dipy-bdist64-27'], 'dipy-whl64-27', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-whl64-35', 4, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-35-win10'], 'dipy-whl64-35-win10', 3, 10, True),
     # OSX nightlies
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
@@ -1191,6 +1196,36 @@ c['builders'].append(BuilderConfig(
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python27\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist64-27',
+    slavenames=win7_64_slaves,
+    factory=dipy_bot.bdist_factory(
+        'whl',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds=dipy_pre_build,
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python27\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist64-35',
+    slavenames=win7_64_slaves,
+    factory=dipy_bot.bdist_factory(
+        'whl',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds=dipy_pre_build,
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python35\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist64-35-win10',
+    slavenames=win10_64_slaves,
+    factory=dipy_bot.bdist_factory(
+        'whl',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds=dipy_pre_build,
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python35\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-33',
@@ -2009,8 +2044,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 178)
-    assert(len(c['schedulers']) == 245)
+    assert(len(c['builders']) == 181)
+    assert(len(c['schedulers']) == 251)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
