Back off to wheel install for 32-bit dipy
See:
http://nipy.bic.berkeley.edu/builders/dipy-bdist32-35/builds/36/steps/shell_10/logs/stdio

--- a/master.cfg
+++ b/master.cfg
@@ -1251,7 +1251,7 @@ c['builders'].append(BuilderConfig(
     name='dipy-bdist32-35',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
-        'exe',
+        'whl',  # nose appears broken finding stuff in eggs
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
