Drop mpkg and exe and egg builds for wheel builds
mpkg is dead; long live wheels.
easy_install is dead; long live wheels.

--- a/master.cfg
+++ b/master.cfg
@@ -954,8 +954,8 @@ c['schedulers'] = sum([
     nibabel_bot.nightly_scheduler(['nibabel-bdist64-27'],
                                   'exe64-27', 2, 00, True),
     # OSX nightlies
-    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.7'], 'egg-27', 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 'egg-33', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-whl-2.7'], 'whl-27', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-whl-3.3'], 'whl-33', 2, 30, True),
     # Dipy
     # Windows 32 nightly builds
     dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 10, True),
@@ -967,8 +967,8 @@ c['schedulers'] = sum([
     dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-whl64-35', 4, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist64-35-win10'], 'dipy-whl64-35-win10', 3, 10, True),
     # OSX nightlies
-    dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-whl-2.7'], 'dipy-whl-27', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-whl-3.3'], 'dipy-whl-33', 3, 30, True),
     # Sympy slow build at night
     sympy_bot.nightly_scheduler(['sympy-py2.6-32'], 'sympy-slow', 2, 30, True),
     # Sympy binary builders
@@ -1163,18 +1163,18 @@ c['builders'].append(BuilderConfig(
 # Need exe because easy_install makes tests executable on 3.3
 nipy_test_cmd = nptest_command('nipy', doctests=True, exe=True)
 c['builders'].append(BuilderConfig(
-    name='nipy-bdist-mpkg-2.7',
+    name='nipy-bdist-whl-2.7',
     slavenames=['osx-10.6'],
     factory=nipy_bot.bdist_factory(
-        'egg',
+        'whl',
         test_cmd=nipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
 c['builders'].append(BuilderConfig(
-    name='nipy-bdist-mpkg-3.3',
+    name='nipy-bdist-whl-3.3',
     slavenames=['osx-10.6'],
     factory=nipy_bot.bdist_factory(
-        'egg',
+        'whl',
         test_cmd=nipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
@@ -1259,21 +1259,21 @@ c['builders'].append(BuilderConfig(
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
-# * numpy, scipy, virtualenv, bdist_mpkg
+# * numpy, scipy, virtualenv
 osx_dipy_test_cmd = ['python',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy']
 c['builders'].append(BuilderConfig(
-    name='dipy-bdist-mpkg-2.7',
+    name='dipy-bdist-whl-2.7',
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
-        'egg',
+        'whl',
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
 c['builders'].append(BuilderConfig(
-    name='dipy-bdist-mpkg-3.3',
+    name='dipy-bdist-whl-3.3',
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
-        'egg',
+        'whl',
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
@@ -1293,13 +1293,14 @@ for slavenames, bdist_suffix in (
     py3_sched_name = 'sympy-bdist{0}-33-scheduler'.format(bdist_suffix)
     py3_build_name = 'sympy-bdist{0}-33-builder'.format(bdist_suffix)
     factory = sympy_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
     factory.addStep(
             SetPropertyFromCommand(
-                command=['python', 'bs_tools.py', 'get-tail', Property('bdist_file')],
+                command=['python', 'bs_tools.py', 'get-tail',
+                         Property('bdist_file')],
                 property='bdist_fname'))
     factory.addStep(
         Trigger(schedulerNames=[py3_sched_name],
@@ -1325,9 +1326,9 @@ for slavenames, bdist_suffix in (
             "/%(prop:bdist_fname)s"),
             Property('bdist_fname'))
             )
-    # easy_install bdist file into virtualenv
+    # pip install bdist file into virtualenv
     factory.addStep(ShellCommand(
-        command=['easy_install', Property('bdist_fname')],
+        command=['pip', 'install', Property('bdist_fname')],
         env=env))
     # pip install nose
     factory.addStep(ShellCommand(
@@ -1378,9 +1379,9 @@ for py_ver in ('2.7', '3.3', '3.4'):
             "/%(prop:bdist_fname)s"),
             Property('bdist_fname'))
             )
-    # Upgrade pip so it can use wheels
+    # Upgrade pip to make sure it can use wheels
     factory.addStep(ShellCommand(
-        command=['easy_install', '-U', 'pip'],
+        command=['python', '-m', 'pip', '-U', 'pip'],
         env=env))
     # pip install bdist file into virtualenv
     factory.addStep(ShellCommand(
